# MusicProductionApp

./: CMakeLists.txt  README.md
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioRouting.cpp  AudioRouting.h  ChannelAudioProcessor.cpp  ChannelAudioProcessor.h  MidiHandler.cpp  MidiHandler.h
src/gui/: ChannelAudioProcessor.h  ChannelStrip.cpp  ChannelStrip.h  MainComponent.cpp  MainComponent.h  MixerPanel.cpp  MixerPanel.h  SimpleLevelMeter.cpp  SimpleLevelMeter.h
